--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <section class="video-section">
     <h2>Featured Video</h2>
     <video controls autoplay muted loop>
-      <source src="https://youtu.be/sQ22pm-xvrE?si=MMXzz64RIQD2D81f" type="video/mp4">
+      <source src="v5.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
   </section>
