--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
       <button type="submit">Send</button>
     </form>
     <div class="links">
-      <a href="mailto:example@gmail.com">Email Me</a> |
-      <a href="https://github.com/yourusername" target="_blank">GitHub</a>
+      <a href="mailto:shahilcloudcomputing@gmail.com">Email Me</a> |
+      <a href="https://github.com/Shahil-05" target="_blank">GitHub</a>
     </div>
   </section>
 
